--- a/ProGame.HospitalAPI.DAL/ProGame.HospitalAPI.DAL.csproj
+++ b/ProGame.HospitalAPI.DAL/ProGame.HospitalAPI.DAL.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProGame.HospitalAPI.Common.Entities\ProGame.HospitalAPI.Common.Entities.csproj" />
+    <ProjectReference Include="..\ProGame.HospitalAPI.DAL.Interfaces\ProGame.HospitalAPI.DAL.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
