--- a/ProGame.HospitalAPI.DAL/ProGame.HospitalAPI.DAL.csproj
+++ b/ProGame.HospitalAPI.DAL/ProGame.HospitalAPI.DAL.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
