Fixed Tests, DAO and BLL validators

--- a/Progame.HospitalAPI.BLL/Progame.HospitalAPI.BLL.csproj
+++ b/Progame.HospitalAPI.BLL/Progame.HospitalAPI.BLL.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ProGame.HospitalAPI.BLL.Interfaces\ProGame.HospitalAPI.BLL.Interfaces.csproj" />
+    <ProjectReference Include="..\ProGame.HospitalAPI.BLL.Validation\ProGame.HospitalAPI.BLL.Validation.csproj" />
     <ProjectReference Include="..\ProGame.HospitalAPI.Common.Entities\ProGame.HospitalAPI.Common.Entities.csproj" />
     <ProjectReference Include="..\ProGame.HospitalAPI.DAL.Interfaces\ProGame.HospitalAPI.DAL.Interfaces.csproj" />
   </ItemGroup>
