--- a/ProGame.HospitalAPI.API/appsettings.json
+++ b/ProGame.HospitalAPI.API/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "Connnectionstrings": {
-    "ConnectionStringHospital": "Data Source=DESKTOP-ATJ1BBO;Initial Catalog=HospitalDB;Integrated Security=True"
+    "ConnectionStringHospital": "Data Source=RulerThink;Initial Catalog=HospitalDB;Integrated Security=True;MultipleActiveResultSets=True"
   }
 }
