--- a/ProGame.HospitalAPI.API/appsettings.json
+++ b/ProGame.HospitalAPI.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConnectionStringHospital": "Data Source=RulerThink;Initial Catalog=HospitalDB;Integrated Security=True;MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,8 +9,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "Connnectionstrings": {
-    "ConnectionStringHospital": "Data Source=RulerThink;Initial Catalog=HospitalDB;Integrated Security=True;MultipleActiveResultSets=True"
-  }
+  "AllowedHosts": "*"
 }
